package tvframework.sym.cmm.dto;

import lombok.Getter;
import lombok.Setter;

/**
 * 공통코드 응답 DTO
 * 
 * @author 공통 서비스 개발팀
 * @since 2025.01.01
 * @version 1.0
 */
@Getter
@Setter
public class CmmnCodeResponseDTO {
    private String upperCodeId;
    private String upperCodeName;
    private String codeId;
    private String codeName;
    private String useFl;
    private String codeCn;
    private String codeLangKey;
}

